--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.24.0",
+    "axios": "^1.10.0",
+    "cloudinary": "^2.7.0",
     "inngest": "^3.40.1",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.2",
     "next": "^15.2.3",
     "react": "^19.0.0",
